k8s/db-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: bmi-db
  namespace: webapp-prod
spec:
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
  clusterIP: None
  selector:
    app: bmi-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bmi-db
  namespace: webapp-prod
spec:
  serviceName: bmi-db
  replicas: 1
  selector:
    matchLabels:
      app: bmi-db
  template:
    metadata:
      labels:
        app: bmi-db
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: db-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
